--- a/diferenciales/input/4-sistemas-lineales.tex
+++ b/diferenciales/input/4-sistemas-lineales.tex
@@ -584,7 +584,7 @@ A modo de recordatorio, hemos visto en \ref{obs:sol-gen-fund} que si $\F(t)$ es 
 $$
     \F(t) \cdot C\ :\ C = \mx{c_1\\c_2\\\ldots\\c_n} = \sum_{j=1}^d c_jX_j(t)
 $$
-\begin{eg}[Cálculo de $e^\A t$, la matriz fundamental principal]
+\begin{eg}[Cálculo de $e^{\A t}$, la matriz fundamental principal]
     Podemos afrontar el cálculo de diversas formas:
     \begin{itemize}
         \item Pasando a forma canónica de Jordan. (Muy costoso).
