--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -238,7 +238,7 @@ Revisión del \today $ $ a las \currenttime.
 \input{input/4-sistemas-lineales}
 \input{input/5-teorema-unicidad}
 \part{Tercer parcial}
-
+\input{input/6-sistemas-autonomos}
 \part{Ap\'{e}ndices}
 
 %\renewcommand{\chaptername}{Apéndice}
@@ -265,7 +265,5 @@ Revisión del \today $ $ a las \currenttime.
 \printglossaries
 
 \bibliographystyle{alpha}
-\bibliography{apuntes-ea}
-
 
 \end{document}
